Make minor fixes while trying to align logo

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 html {
   box-sizing: border-box;
-  font-family: "Georgia", serif;
+  font-family: Georgia, serif;
   line-height: 1.5;
   background-color: #f2f1ed;
   color: #000;
@@ -21,14 +21,15 @@ header {
 }
 
 body {
-  margin: 1rem;
+  margin: 0;
+  padding: 1rem;
   display: grid;
   grid-template-columns: repeat(2, 50%);
   grid-template-rows: repeat(2, 50%);
   gap: 1rem;
   grid-template-areas:
     "pano  pano"
-    "main  main"
+    "main  main";
 }
 
 h1 {
@@ -37,10 +38,11 @@ h1 {
   grid-column: 1;
   grid-row: 1;
   align-items: end;
+  margin: 0;
 }
 
 h2 {
-  font-family: 'Patua One', cursive;
+  font-family: "Patua One", sans-serif;
   color: #30658d;
   margin-bottom: 0;
 }
@@ -54,10 +56,12 @@ nav {
 ul {
   list-style-type: none;
   display: flex;
+  margin: 0;
+  padding: 0;
 }
 
 li {
-  font-family: 'Patua One', cursive;
+  font-family: "Patua One", sans-serif;
   font-size: 2rem;
   padding: 1rem;
 }
@@ -80,5 +84,5 @@ figure {
 }
 
 p {
-  margin-top: 0;
+  margin: 0;
 }
